--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ GerenciadorTemakeria/.settings/.jsdtscope
 *.prefs
 GerenciadorTemakeria/.settings/org.eclipse.wst.common.component
 *.container
+GerenciadorTemakeria/.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
+GerenciadorTemakeria/.settings/org.eclipse.wst.common.project.facet.core.xml
+GerenciadorTemakeria/.settings/org.eclipse.wst.jsdt.ui.superType.name
