--- a/GerenciadorTemakeria/pom.xml
+++ b/GerenciadorTemakeria/pom.xml
@@ -22,6 +22,7 @@
 
 		<!-- JSF Version -->
 		<jsf.version>2.2.10</jsf.version>
+		<primefaces.version>4.0</primefaces.version>
 
 		<!-- Logging -->
 		<logback.version>1.0.13</logback.version>
@@ -99,6 +100,12 @@
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
 			<version>${jsf.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>${primefaces.version}</version>
 		</dependency>
 
 		<!-- Logging with SLF4J & LogBack -->
