--- a/GerenciadorTemakeria/WebContent/WEB-INF/web.xml
+++ b/GerenciadorTemakeria/WebContent/WEB-INF/web.xml
@@ -22,7 +22,7 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
      
     <!-- Welcome page -->
 	<welcome-file-list>
-		<welcome-file>faces/person.xhtml</welcome-file>
+		<welcome-file>faces/dashboard.xhtml</welcome-file>
 	</welcome-file-list>
 	
 	<!-- Map these files with JSF -->
